# voxforge

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1778138419181-333d169fbad0b.mjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  tests.yml
design/design_handoff_voxforge_redesign/: README.md  VoxForge.html  main-window.jsx  overlay.jsx
docs/superpowers/plans/: 2026-05-06-overlay-native-gtk.md  2026-05-07-ui-redesign.md  2026-05-11-persistent-draggable-overlay.md
docs/superpowers/specs/: 2026-05-11-persistent-draggable-overlay-design.md
scripts/: voxforge-shortcut.sh
src/: App.css  App.tsx  index.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py
src-tauri/scripts/: postinst.sh
src-tauri/src/: audio.rs  commands.rs  config.rs  history.rs  hotkey.rs  inject.rs  ipc.rs  lib.rs  main.rs  overlay.rs  portal_shortcuts.rs  state.rs  transcribe.rs
src/components/: History.tsx  Kbd.tsx  MicIcon.tsx  Recording.tsx  Settings.tsx  StatusBar.tsx  Tabs.tsx  icons.tsx
src/components/tabs/: HistoryTab.tsx  RecordTab.tsx  SettingsTab.tsx
src/hooks/: useRecording.ts
src/types/: api.ts
