[package]
name = "voxforge"
version = "0.2.2"
description = "Voice-to-text for Linux"
authors = ["VoxForge Contributors"]
edition = "2021"
default-run = "voxforge"

[lib]
name = "voxforge"
path = "src/lib.rs"

[[bin]]
name = "voxforge"
path = "src/main.rs"

[[bin]]
name = "voxforge-ctl"
path = "src/bin/voxforge_ctl.rs"

[dependencies]
tauri = { version = "~2.10", features = [
  "tray-icon",
  "image-png",
] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-dialog = "2.0"

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7"
futures-util = "0.3"
arboard = "3"

# XDG desktop portal — modern global hotkeys on Wayland (Activated / Deactivated)
ashpd = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"] }

# Audio
cpal = "0.17"
hound = "3.5"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Config
serde_yaml = "0.9"
directories = "5.0"

# Utils
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }

# Linux-only: native GTK overlay window (avoids WebKit2GTK widget min-size clamp).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
tauri-build = { version = "~2.5", features = [] }

[dev-dependencies]
